trunk/Archive2/b3/c414654d9720af/output
main.cpp:2:1: error: expected unqualified-id before 'for'
 for (const auto& p1 : MyMap2)
 ^
main.cpp:8:12: error: variable or field 'print' declared void
 void print(list<int> l,int first, int z, int indx)
            ^
main.cpp:8:12: error: 'list' was not declared in this scope
main.cpp:8:17: error: expected primary-expression before 'int'
 void print(list<int> l,int first, int z, int indx)
                 ^
main.cpp:8:24: error: expected primary-expression before 'int'
 void print(list<int> l,int first, int z, int indx)
                        ^
main.cpp:8:35: error: expected primary-expression before 'int'
 void print(list<int> l,int first, int z, int indx)
                                   ^
main.cpp:8:42: error: expected primary-expression before 'int'
 void print(list<int> l,int first, int z, int indx)
                                          ^
